--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                           <!--Nav section-->
            <nav id="nav1">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="categories.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="about.html">About</a></li>
