--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="categories.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="categories.html">Categories</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="aboutUs.html">About</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                 </ul>
             </nav>
