--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            <nav id="nav1">
                 <ul>
                     <li><a href="categories.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="collection.html">Events</a></li>
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="aboutUs.html">About</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
