--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,7 +26,7 @@
                     <li><a href="collection.html">Events</a></li>
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="aboutUs.html">About</a></li>
-                    <li><a href="Sponsors.html">Sponsors</a></li>
+                    <li><a href="sponsors.html">Sponsors</a></li>
                 </ul>
             </nav>
             <main>   
