--- a/tickets.html
+++ b/tickets.html
@@ -21,11 +21,12 @@
             </header>
             <nav>
                 <ul id="navul">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="categories.html">Categories</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="Sponsors.html">Sponsors</a></li>
+                        <li><a href="categories.html">Home</a></li>
+                        <li><a href="events_form.html">Event form</a></li>
+                        <li><a href="collection.html">Events</a></li>
+                        <li><a href="categories.html">Categories</a></li>
+                        <li><a href="aboutUs.html">About</a></li>
+                        <li><a href="sponsors.html">Sponsors</a></li>
                 </ul>
             </nav>
                        
@@ -65,16 +66,14 @@
                 <div id="flex-container">   
 
                     <ul>
-                        <li><a href=".html">Venues</a></li>
-                        <li><a href="h">Contact Us</a></li>
-                        <li><a href="j">Help</a></li>
-                        <li><a href="h">About</a> </li>
-                        <li><a href="h">Feedback</a></li>
-                        <li><a href=".html">Maps</a></li>
-                        <li><a href="h">Schedule</a></li>
-                        <li><a href="j">Transit</a></li>
-                        <li><a href="h">Regulations</a></li>
-                        <li><a href="h">careers</a></li>
+                            <li><a href="aboutUs.html">About Us</a></li>
+                            <li> <a href="feedback.html">Feedback</a></li>
+                            
+                            <li><a href="transit.html">Transit</a></li>
+                            <li><a href="dos.html">Regulations</a></li>
+                            <li><a href="careers.html">Careers</a></li>
+                            <li> <a href="index.html">Signup</a></li>
+                            <li><a href="categories.html">Categories</a> </li>
                     </ul>
 
                    © 2019 Eventify!</div>
